# rslab

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  GENERIC_DRIVER_PLAN.md  LICENSE  LICENSE-THIRD-PARTY  NOTICE  README.md  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
benches/: adaptive_restart.rs  adaptive_restart_plot.py  agg_thread_scaling.py  agg_thread_scaling_solvers.py  analyze_scaling.py  analyze_sweep.py  autotune_plot.py  bench_style.py  bench_suite.rs  block_gmres.rs  block_gmres_plot.py  block_gmres_scaling.rs  catalog.rs  corpus_breakdown.py  deflation_study.rs  deflation_study_plot.py  dense_factor.rs  fgmres_accounting.rs  fit_residual.py  fit_scaling.py  front_mem.rs  front_profile.rs  gemm_peak.rs  head_to_head.py  issue52_baseline.rs  issue52_overhead.rs  klu_circuit.rs  leftlook_mem.rs  lu_warm_probe.rs  mom_diag.rs  mom_factor_probe.rs  mom_loop.rs  perf_axes.rs  phased_reuse.py  phased_reuse.rs  precond.rs  precond_gmres.rs  precond_gmres_plot.py  probe_complex.rs  recycle_study.rs  (+16 more)
benches/bench_out/: adaptive_restart.jsonl  block_gmres_mgs_ref.jsonl  deflation_study.jsonl  estimate.jsonl  fgmres_accounting.jsonl  h2h_sym.jsonl  h2h_unsym.jsonl  real.jsonl  recycle_study.jsonl  residual.json  scaling.jsonl  sweep.jsonl.pre-issue2.bak  threads.jsonl  tuner_model.json  tuner_parity.json
crates/feral-amd/: Cargo.toml  README.md
crates/feral-amd/src/: lib.rs
crates/feral-amd/tests/: oracle_match.rs
crates/feral-amd/tests/data/amd_oracle/: README.md  band_20_3.txt  diag_4.txt  gh_258.txt  tridiag_10.txt
crates/feral-amd/tests/data/amd_oracle/harness/: Cargo.toml.txt  main.rs.txt
crates/feral-amf/: Cargo.toml  README.md
crates/feral-amf/src/: lib.rs  stats.rs
crates/feral-amf/tests/: expected_perm.rs  smoke.rs
crates/feral-kahip/: Cargo.toml  README.md
crates/feral-kahip/src/: cycle.rs  data_reduction.rs  flow.rs  graph.rs  lib.rs  node_nd.rs
crates/feral-metis/: Cargo.toml  README.md
crates/feral-metis/src/: coarsen.rs  fm_refine.rs  graph.rs  initial_partition.rs  lib.rs  node_nd.rs  rng.rs  separator.rs
crates/feral-metis/tests/: dense_quotient.rs
crates/feral-ordering-core/: Cargo.toml  README.md
crates/feral-ordering-core/src/: lib.rs
crates/feral-ordering-core/src/quotient_graph/: mod.rs  workspace.rs
crates/feral-ordering-core/tests/: invariants.rs
crates/feral-scotch/: Cargo.toml  README.md
crates/feral-scotch/src/: band_fm.rs  compress.rs  graph.rs  halo_fm.rs  lib.rs  node_nd.rs  vertex_separator.rs
crates/feral-scotch/tests/: issue_3_kkt_repro.rs
crates/rslab-amd/: Cargo.toml  README.md
crates/rslab-amd/src/: lib.rs  stats.rs
crates/rslab-amd/tests/: oracle_match.rs
crates/rslab-amd/tests/data/amd_oracle/: README.md  amd_demo_24.txt  arrow_200.txt  arrow_5.txt  band_20_3.txt  diag_4.txt  gh_258.txt  grid_7x7.txt  tridiag_10.txt
crates/rslab-amd/tests/data/amd_oracle/harness/: Cargo.toml.txt  main.rs.txt
crates/rslab-amf/: Cargo.toml  README.md
crates/rslab-amf/src/: lib.rs  stats.rs
crates/rslab-amf/tests/: expected_perm.rs  smoke.rs
crates/rslab-kahip/: Cargo.toml  README.md
crates/rslab-kahip/src/: cycle.rs  data_reduction.rs  flow.rs  flow_refine.rs  graph.rs  lib.rs  node_nd.rs  node_separator.rs
crates/rslab-metis/: Cargo.toml  README.md
crates/rslab-metis/examples/: grid_fill.rs
crates/rslab-metis/src/: coarsen.rs  fm_refine.rs  graph.rs  initial_partition.rs  lib.rs  node_nd.rs  node_refine.rs  rng.rs  separator.rs
crates/rslab-metis/tests/: dense_quotient.rs
crates/rslab-ordering-core/: Cargo.toml  README.md
crates/rslab-ordering-core/src/: lib.rs  rcm.rs
crates/rslab-ordering-core/src/quotient_graph/: algo.rs  metric.rs  mod.rs  workspace.rs
crates/rslab-ordering-core/tests/: invariants.rs
crates/rslab-scotch/: Cargo.toml  README.md
crates/rslab-scotch/src/: band_fm.rs  compress.rs  graph.rs  halo_fm.rs  lib.rs  node_nd.rs  test_util.rs  vertex_separator.rs
crates/rslab-scotch/tests/: issue_3_kkt_repro.rs
dev/research/: factor-throughput-2026-07.md  heuristic-defaults-2026-07.md  ll-utilization-2026-07.md  metis-node-separator-2026-07.md  mixed-precision-2026-07.md  supernodal-solve-plan-2026-07.md
docs/report/: .gitignore  Makefile  rslab.tex
python/: Cargo.toml  README.md  pyproject.toml
python/.cargo/: config.toml
python/rslab/: __init__.py
python/src/: lib.rs
python/tests/: test_rslab.py
src/: analysis.rs  auto_tune.rs  auto_tune_model.json  auto_tune_model_ldlt.json  auto_tune_model_lu.json  diagnostics.rs  error.rs  inertia.rs  lib.rs  scalar.rs  tuner_parity.json  tuning.rs
src/dense/: block_ldlt32.rs  equilibrate.rs  factor.rs  ldlt_generic.rs  matrix.rs  mod.rs  rook.rs  schur_kernel.rs  solve.rs
src/io/: mod.rs  mtx.rs
src/matgen/: bem.rs  download.rs  fem.rs  mod.rs  random.rs  stencil.rs  structured.rs
src/numeric/: blr.rs  condition.rs  dense_eig.rs  factorize.rs  gemm_tuning.rs  iterative.rs  klu.rs  mixed.rs  mod.rs  multifrontal_generic.rs  multifrontal_ldlt.rs  (+4 more)
tests/: amf_corpus_oracle.rs  auto_strategy.rs  blocked_ldlt.rs  build_row_indices_trailing_invariant.rs  column_renumbering.rs  column_renumbering_parity.rs  d4_solve_2x2_gate.rs  d6_contrib_uninit.rs  d7_block32_dispatch_pooled.rs  delayed_pivoting.rs  dense_fast_path.rs  dense_ldlt.rs  factor_scratch_parity.rs  factor_workspace_parity.rs  factors_ld_export.rs  fine_grained_delay.rs  fma_opt_in_roundtrip.rs  growth_flag.rs  issue52_stats.rs  issue64_arrow_ordering.rs  issue65_mc64_fallback.rs  issue67_thin_ordering.rs  issue_15_cascade_arm_gate.rs  issue_17_robot_1600_cascade_off.rs  issue_18_narx_cfy_cascade_off.rs  issue_2_kkt_ls_init.rs  issue_46_saddle_kkt_cascade.rs  issue_55_delay_budget.rs  issue_55_n_tiny_counter.rs  kkt_hardening.rs  large_matrix_smoke.rs  ldlt_compress.rs  ll_thread_determinism.rs  maxfromm_parity.rs  mc64_end_to_end.rs  mc64_scaling.rs  multi_rhs.rs  n2_static_pivot_scaling.rs  n3_parallel_profiler.rs  n4_mc64_retry_latch.rs  (+17 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+264 files in other folders)
