[workspace]
members = [".", "crates/feral-ordering-core", "crates/feral-amd", "crates/feral-amf", "crates/feral-metis", "crates/feral-scotch", "crates/feral-kahip"]
# Root commands (`cargo build`/`test`/`clippy` with no -p/--workspace) operate
# on the `feral` package only. `feral-diagnostics` is a member so it shares the
# lockfile and `cargo run -p feral-diagnostics --bin <name>` works, but it is
# NOT a dependency of `feral`, so the default build/test set never compiles its
# ~144 one-off binaries (issue #71). Build them explicitly with
# `cargo build -p feral-diagnostics`.
resolver = "2"

[package]
name = "rla"
version = "0.11.2"
edition = "2021"
license = "MIT"
description = "RLA — pure-Rust sparse complex/real direct solver (symmetric LDLᵀ + unsymmetric LU) and preconditioner, a PARDISO-style embeddable replacement."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/feral"
homepage = "https://github.com/jkitchin/feral"
readme = "README.md"
keywords = ["sparse", "solver", "linear-algebra", "ldlt", "kkt"]
categories = ["mathematics", "science"]
autobins = true
autoexamples = false
autotests = true
exclude = [
    "/dev",
    "/external_benchmarks",
    "/data",
    "/manuscript",
    "/ref",
    "/scripts",
    "/assets",
    "/book",
    "/examples",
    "/src/bin",
    "/tests",
    "/.crucible",
    "/.github",
    "/.pre-commit-config.yaml",
    "/CLAUDE.md",
    "/FERAL-PROJECT-SPEC.md",
    "/tasks.org",
]

[lib]
name = "rla"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Complex scalar field for the complex-symmetric (PARDISO mtype 6) path.
# Pure-Rust, already in the dependency tree transitively. Used by the
# `Scalar` trait in src/scalar.rs and the generic numeric kernels.
num-complex = "0.4"
# SIMD backbone for the Schur-update micro-kernel (Phase 2.4.2).
# Pinned to faer 0.22.x's exact version. Usage is confined to
# src/dense/schur_kernel.rs; see dev/decisions.md for the
# replacement trigger and interface boundary.
pulp = { version = "0.22.2", default-features = false, features = ["x86-v3"] }
# Data-parallelism for the multifrontal assembly tree (Phase 2.5.2).
# Pure-Rust, fits the zero-non-Rust-dep constraint. Used only by
# the opt-in parallel driver in src/numeric/factorize.rs; the
# sequential path remains the default and reference implementation.
rayon = "1.10"
# Complex/real SIMD GEMM (sarah-quinones, the faer author) for the trailing
# Schur-complement update in the generic multifrontal front kernel. `c64` is
# `num_complex::Complex<f64>`, so our `Scalar` values pass through unchanged;
# runtime AVX2/AVX-512 dispatch. The small panel Bunch-Kaufman stays scalar
# (PARDISO-style: tiny panel scalar, BLAS-3 trailing update). f64 production
# keeps its own kernel in src/numeric/factorize.rs — this is the complex path.
gemm = "0.18"
# Ordering crates are consumed by `symbolic_factorize_with_method`
# via the OrderingMethod enum in src/symbolic/mod.rs. The in-tree
# src/ordering/amd.rs is still the default (OrderingMethod::Amd)
# pending retirement per dev/decisions.md.
feral-ordering-core = { path = "crates/feral-ordering-core", version = "0.2" }
feral-amd = { path = "crates/feral-amd", version = "0.2" }
feral-amf = { path = "crates/feral-amf", version = "0.2" }
feral-metis = { path = "crates/feral-metis", version = "0.2" }
feral-scotch = { path = "crates/feral-scotch", version = "0.2" }
feral-kahip = { path = "crates/feral-kahip", version = "0.2" }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
# Reference competitor for the complex-symmetric benchmark. faer's sparse
# path has no complex-*symmetric* LDLᵀ (its BK/LDLT is Hermitian), so the
# fair analogue is its sparse LU on the full matrix — exactly the 2×
# storage/flops we beat by exploiting A = Aᵀ. Dev-only: pulls its own pulp,
# independent of our pinned 0.22.2. faer's `c64` is `num_complex::Complex<f64>`.
faer = "0.22"
# rmumps used only for reference timing comparisons in benchmarks:
# rmumps = { path = "../ripopt/rmumps" }  # uncomment when needed

[[bench]]
name = "vs_faer"
harness = false

[[bench]]
name = "vs_mom"
harness = false

[[bench]]
name = "leftlook_mem"
harness = false

[[bench]]
name = "precond"
harness = false

[[bench]]
name = "vs_real"
harness = false

[[bench]]
name = "mom_loop"
harness = false

[[bench]]
name = "mom_diag"
harness = false

[[bench]]
name = "gemm_peak"
harness = false

[[bench]]
name = "front_mem"
harness = false

[profile.release]
debug = true
