# Standalone workspace: the bindings are built by maturin, fully decoupled from
# the pure-Rust solver workspace one level up (own target dir, own lockfile).
[workspace]

[package]
name = "rslab-py"
version = "0.19.0"
edition = "2021"
license = "MIT"
description = "PyO3/NumPy bindings for RSLAB - a pure-Rust sparse direct solver and preconditioner."
authors = ["Milan Rother"]
repository = "https://github.com/milanofthe/rslab"
publish = false

[lib]
# The compiled extension module imported by the Python package as `rslab._rslab`.
name = "_rslab"
crate-type = ["cdylib"]

[dependencies]
# The solver core, by path. The bindings are a thin FFI wrapper; all numeric
# work happens in `rslab`, which stays 100% pure Rust. `tuning` enables the
# cached hardware calibration (pure-Rust sysinfo dep): after a one-time
# `rslab.install_diagnose()` the default factor picks its worker count from
# this machine's measured speedup curve; without the cache nothing changes.
rslab = { path = "..", features = ["tuning"] }
# Same complex scalar type the core uses (num-complex 0.4 == numpy's c64/c32).
num-complex = "0.4"
# abi3-py39: one wheel for CPython 3.9+ per platform.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
