[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "rslab"
version = "0.15.0"
description = "Pure-Rust sparse direct solver (symmetric LDLᵀ + unsymmetric LU) and preconditioner, with NumPy/SciPy bindings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Milan Rother" }]
keywords = ["sparse", "solver", "linear-algebra", "ldlt", "lu", "preconditioner", "pardiso", "scipy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["numpy>=1.21", "scipy>=1.7"]

[project.urls]
Homepage = "https://github.com/milanofthe/rslab"
Repository = "https://github.com/milanofthe/rslab"

[tool.maturin]
# Mixed layout: the pure-Python package `rslab/` plus the compiled extension
# `rslab._rslab` built from this crate. `python-source = "."` makes maturin find
# the `rslab` package next to this pyproject.toml.
python-source = "."
module-name = "rslab._rslab"
features = ["pyo3/extension-module"]
