[package]
name = "feral-amd"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Approximate Minimum Degree (AMD) fill-reducing ordering, quotient-graph algorithm (Amestoy, Davis & Duff 1996, 2004). Pure Rust, standalone."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/feral"
homepage = "https://github.com/jkitchin/feral"
readme = "README.md"
keywords = ["sparse", "ordering", "amd", "fill-reducing", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "feral_amd"

[dependencies]
feral-ordering-core = { path = "../feral-ordering-core", version = "0.2" }

[dev-dependencies]
