[package]
name = "feral-kahip"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "KaHIP-style flow-based nested-dissection fill-reducing ordering (Sanders & Schulz 2011; data reduction per Ost, Schulz & Strash 2021). Pure Rust, clean-room, standalone. Implements the FERAL ordering-crate contract."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/feral"
homepage = "https://github.com/jkitchin/feral"
readme = "README.md"
keywords = ["sparse", "ordering", "kahip", "nested-dissection", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "feral_kahip"

[dependencies]
feral-ordering-core = { path = "../feral-ordering-core", version = "0.2" }
feral-amd = { path = "../feral-amd", version = "0.2" }
feral-metis = { path = "../feral-metis", version = "0.2" }

[dev-dependencies]
