[package]
name = "feral-scotch"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "SCOTCH-style nested-dissection fill-reducing ordering (Pellegrini 1996). Pure Rust, clean-room, standalone. Implements the FERAL ordering-crate contract."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/feral"
homepage = "https://github.com/jkitchin/feral"
readme = "README.md"
keywords = ["sparse", "ordering", "scotch", "nested-dissection", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "feral_scotch"

[dependencies]
feral-ordering-core = { path = "../feral-ordering-core", version = "0.2" }
feral-amd = { path = "../feral-amd", version = "0.2" }
feral-metis = { path = "../feral-metis", version = "0.2" }

[dev-dependencies]
feral-amd = { path = "../feral-amd", version = "0.2" }
feral-ordering-core = { path = "../feral-ordering-core", version = "0.2" }
