[package]
name = "rslab-amf"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Approximate Minimum Fill (AMF / HAMF4) fill-reducing ordering, quotient-graph algorithm (Amestoy 1999). Pure Rust, standalone."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/rslab"
homepage = "https://github.com/jkitchin/rslab"
readme = "README.md"
keywords = ["sparse", "ordering", "amf", "fill-reducing", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "rslab_amf"

[dependencies]
rslab-ordering-core = { path = "../rslab-ordering-core", version = "0.2" }

[dev-dependencies]
