[package]
name = "rslab-ordering-core"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Shared input/output types for RSLAB's fill-reducing ordering crates (rslab-amd, rslab-metis, rslab-scotch, rslab-kahip). Defines the locked contract surface - CscPattern, OrderingStats, OrderingError."
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/rslab"
homepage = "https://github.com/jkitchin/rslab"
readme = "README.md"
keywords = ["sparse", "ordering", "fill-reducing", "linear-algebra"]
categories = ["mathematics", "science"]

[lib]
name = "rslab_ordering_core"

[dependencies]

[dev-dependencies]
